--- a/house-project/angular.json
+++ b/house-project/angular.json
@@ -21,7 +21,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "data"
+              "src/data"
             ],
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
